2004-10-30  Michael Yount <csf@moscow.com>

	* bin/mj_enqueue:  Place the mj_queueserv lock in the lock
	directory.  Suggested by SRE.

	* lib/Mj/Lock.pm:  (expire_locks)  Do not remove the queueserv
	lock file.

	* setup/setup_func.pl:  (make_alias_symlinks)  Unlink before
	creating a symlink.  Thanks to SRE.

2004-10-27  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (list_config_get)  Retrieve GLOBAL
	settings for the ALL pseudo-list.  Thanks to Marc Fournier.

2004-10-23  Michael Yount <csf@moscow.com>

	* lib/Mj/Inform.pm:  (inform)  Add a shell hook.
	Suggested by Marc Fournier and John Hansen.

2004-10-22  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (lists)  Use the lists_aux_none format
	file when no auxiliary lists are found.
	Thanks to Roger Klorese.

2004-10-21  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Add support for the sublist command.

	* lib/Majordomo.pm:  (sublist, _sublist)  Add support
	for the sublist command.  Suggested by Roger Klorese.
	(_subscribe) Exclude digest subscriptions for sublists.  
	(trigger)  Update the registry after a subscription 
	expires.  Thanks to SRE.
	
	* lib/Mj/CommandProps.pm:  Add support for the sublist command.

	* lib/Mj/Format.pm:  Add support for the sublist command.

	* lib/Mj/List.pm:  (get_setting_data)  Exclude digests
	from the list of classes for sublists.
	(aux_create, aux_destroy)  Support the creation and destruction
	of sublists.

	* lib/Mj/SimpleDB/Base.pm:  (erase)  Remove a sublist's database
	file if one exists.

2004-10-18  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Version number is now 0.1200410180.
	(_lists_aux)  The lists-aux command now displays only
	auxiliary lists.
	(who_chunk)  Bugfix:  Retrieve subscriber info for sublists
	of the DEFAULT pseudo-list.
	(standard_subs)  Add the PLIST substitution, which contains
	the list name without any sublist.

	* lib/Mj/CommandProps.pm:  The lists-aux command precludes
	the use of other command modes.
